sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:17: error: Unmatched closing brace '}' ignored here
        setValeur(j, v) }}
                        ^AlgShellSort:24: error: ':' expected but ')' found.
def insertion (ecart)  {
                    ^AlgShellSort:39: error: identifier expected but '}' found.
}
^